WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237930
Crash under HTMLDocumentParser::didBeginYieldingParser()
https://bugs.webkit.org/show_bug.cgi?id=237930
Summary
Crash under HTMLDocumentParser::didBeginYieldingParser()
Per Arne Vollan
Reported
2022-03-15 15:58:33 PDT
Fix crash under HTMLDocumentParser::didBeginYieldingParser().
Attachments
Patch
(1.52 KB, patch)
2022-03-15 16:00 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2022-03-15 15:59:13 PDT
<
rdar://45607220
>
Per Arne Vollan
Comment 2
2022-03-15 16:00:43 PDT
Created
attachment 454768
[details]
Patch
Geoffrey Garen
Comment 3
2022-03-15 16:25:42 PDT
Comment on
attachment 454768
[details]
Patch r=me
Per Arne Vollan
Comment 4
2022-03-15 16:36:57 PDT
Comment on
attachment 454768
[details]
Patch Thanks for reviewing!
EWS
Comment 5
2022-03-15 17:52:50 PDT
Committed
r291324
(
248463@main
): <
https://commits.webkit.org/248463@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454768
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug