Cherry-pick r291324. rdar://problem/45607220

Crash under HTMLDocumentParser::didBeginYieldingParser()
    https://bugs.webkit.org/show_bug.cgi?id=237930
    <rdar://45607220>

    Reviewed by Geoffrey Garen.

    Add null pointer check.

    No new tests, unable to reproduce.

    * html/parser/HTMLDocumentParser.cpp:
    (WebCore::HTMLDocumentParser::didBeginYieldingParser):
    (WebCore::HTMLDocumentParser::didEndYieldingParser):

    Canonical link: https://commits.webkit.org/248463@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291324 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.342@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@291669 268f45cc-cd09-0410-ab3c-d52691b4dbfc